Integrate pinia colada

--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -35,6 +35,9 @@
     "@nuxt/ui": "catalog:nuxt",
     "@nuxtjs/supabase": "catalog:nuxt",
     "@observablehq/plot": "catalog:dataviz",
+    "@pinia/colada": "catalog:vue",
+    "@pinia/colada-nuxt": "catalog:nuxt",
+    "@pinia/nuxt": "catalog:nuxt",
     "@types/d3": "catalog:dataviz",
     "@uwdata/mosaic-core": "catalog:dataviz",
     "@uwdata/mosaic-sql": "catalog:dataviz",
@@ -48,12 +51,14 @@
     "jwt-decode": "catalog:",
     "meilisearch": "catalog:",
     "nuxt-galaxy": "workspace:*",
+    "pinia": "catalog:vue",
     "uuid": "catalog:",
     "vitest": "catalog:",
     "zod": "catalog:",
     "zod-validation-error": "catalog:"
   },
   "devDependencies": {
+    "@pinia/colada-devtools": "catalog:vue",
     "@vue/test-utils": "catalog:",
     "eslint": "catalog:",
     "happy-dom": "catalog:",
