--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -3,12 +3,12 @@ shellEmulator: true
 trustPolicy: no-downgrade
 
 trustPolicyExclude:
+  - nuxt-component-meta@0.17.1
   - chokidar@4.0.3
   - undici-types@6.21.0
   - undici@6.22.0
   - semver@6.3.1
-  - '@nuxtjs/supabase@2.0.3'
-  - nuxt-component-meta@0.17.1
+  - '@nuxtjs/supabase@2.0.4'
   - rxjs@7.8.2
   - nuxt-component-meta@0.17.2
 packages:
@@ -51,7 +51,6 @@ catalog:
   citty: ^0.2.0
   defu: ^6.1.4
   dotenv: ^17.2.3
-
   drizzle-kit: ^1.0.0-beta.13
   drizzle-orm: ^1.0.0-beta.13
   effect: ^3.19.6
@@ -103,11 +102,17 @@ catalogs:
     '@nuxt/schema': ^4.3.0
     '@nuxt/test-utils': ^3.20.1
     '@nuxt/ui': ^4.4.0
-    '@nuxtjs/supabase': ^2.0.3
+    '@nuxtjs/supabase': ^2.0.4
+    '@pinia/colada-nuxt': ^0.3.1
+    '@pinia/nuxt': ^0.11.3
     nuxt: ^4.3.0
     nuxt-llms: ^0.1.3
     nuxt-og-image: ^5.1.12
     nuxt-studio: ^1.1.0
+  vue:
+    '@pinia/colada': ^0.21.5
+    '@pinia/colada-devtools': ^0.4.4
+    pinia: ^3.0.4
 
 ignoredBuiltDependencies:
   - '@parcel/watcher'
